--- a/templates/add_employee.html
+++ b/templates/add_employee.html
@@ -85,6 +85,9 @@
                 </div>
             {% endfor %}
             <button type="submit">Add Employee</button>
+            <a href="{% url 'admin_dashboard' %}" class="cancel-btn">Cancel</a>
+            
+
         </form>
     </div>
 </body>
